change name from chino to chino's

--- a/source/_posts/diary/2016-0125來搬家囉.md
+++ b/source/_posts/diary/2016-0125來搬家囉.md
@@ -15,6 +15,12 @@ tags:
 
 <!--more-->
 
+## 考試好煩...
+
+學測考完了，數學很可惜的感覺是沒有滿級了，於是為了考台灣的資工系，我只剩繼續拚今年的TOI(資訊奧林匹亞)和考指考了。
+但是在那之前還有一點時間...。
+
+
 ## 架新的Blog
 
 原本用的Blogger用起來就是有點卡卡的，本來想自己寫，後來發現了Hexo這套靜態Blog神器。對!他是靜態的，跟我高一想寫的東西一樣，只不過我現在還是寫不出來這種東西就是了QQ，而且這完程度超高的，翻了翻作者的Blog，發現說不定作者做這個的時候跟我想得差不多...可是他寫得出來我不知道行不行...。
@@ -25,6 +31,8 @@ tags:
 寫到這裡的現在我才搬完38篇，還有大概60多篇吧...。
 
 之後要來買網域名稱，每個架Blog的人好像都有買的樣子，而且其實也不貴，不過名字好難取啊，取名字果然是程式設計師最大的瓶頸。
+
+架這個Blog有很多小細節，Hexo真的很好用，也許找時間來寫筆記。
 
 
 ## 廢話
