add new code,update code

--- a/source/_posts/code/2016-0316TIOJ-IOI-1886-【IOI2015】Teams-一堆提姆.md
+++ b/source/_posts/code/2016-0316TIOJ-IOI-1886-【IOI2015】Teams-一堆提姆.md
@@ -4,13 +4,16 @@ tags:
   - C++
   - TIOJ
   - IOI
-  - Algorithm
+  - 持久化
+  - 線段樹
 category:
   - Code 備忘錄
   - Data Structure
 date: 2016-03-16 14:07:28
 ---
 
+
+http://tioj.ck.tp.edu.tw/problems/1886
 
 這題是IOI 2015，TOI又要考考古題了很討厭QAQ。
 
