--- a/source/_posts/diary/2016-0319TOI選訓營第一個禮拜心得.md
+++ b/source/_posts/diary/2016-0319TOI選訓營第一個禮拜心得.md
@@ -8,7 +8,10 @@ tags:
  - AlphaGo
 ---
 
-<script src="http://source.pixiv.net/source/embed.js" data-id="55824195_1525068a5d53fec58b7409d313c434fe" data-size="large" data-border="off" charset="utf-8"></script><noscript><p><a href="http://www.pixiv.net/member_illust.php?mode=medium&amp;illust_id=55824195" target="_blank">AlphaGoたそ</a> by <a href="http://www.pixiv.net/member.php?id=184346" target="_blank">とみを</a> on <a href="http://www.pixiv.net/" target="_blank">pixiv</a></p></noscript>
+ > [AlphaGoたそ | とみを [pixiv]](http://www.pixiv.net/member_illust.php?mode=medium&illust_id=55824195)
+{% asset_img 001.jpg AlphaGoたそ | とみを [pixiv] %}
+
+-----------------------
 
 來寫寫TOI第1週還有一模的心得吧！
 最近考了入營考還有有的沒的，然後到了現在，大概來紀錄一下。
