--- a/source/_posts/diary/2016-0319TOI選訓營第一個禮拜心得.md
+++ b/source/_posts/diary/2016-0319TOI選訓營第一個禮拜心得.md
@@ -9,7 +9,7 @@ tags:
 ---
 
  > [AlphaGoたそ | とみを [pixiv]](http://www.pixiv.net/member_illust.php?mode=medium&illust_id=55824195)
-{% asset_img 001.jpg AlphaGoたそ | とみを [pixiv] %}
+{% asset_img 001.jpg とみを - AlphaGoたそ(id=55824195) %}
 
 -----------------------
 
