--- a/source/_posts/diary/2016-0125來搬家囉.md
+++ b/source/_posts/diary/2016-0125來搬家囉.md
@@ -7,6 +7,7 @@ tags:
 - New Blog
 ---
 
+ > [みつあみ | ののの [pixiv]](//www.pixiv.net/member_illust.php?mode=medium&illust_id=52769426)
 {% asset_img 001.png ののの - みつあみ(id=52769426) %}
 
 這篇就當作第一篇日記啦！
