--- a/source/_posts/code/2016-0316TIOJ-IOI-1886-【IOI2015】Teams-一堆提姆.md
+++ b/source/_posts/code/2016-0316TIOJ-IOI-1886-【IOI2015】Teams-一堆提姆.md
@@ -45,7 +45,7 @@ http://tioj.ck.tp.edu.tw/problems/1886
 另外一種比較穩定的解法，我們要先觀察剛剛的 m 平方DP，我們想一下當 i<j<k 時，如果要從DP[i]和DP[j]轉移到DP[k]，我們可以保證，如果i比j還要好，那對於所有l>k，轉移到DP[l]時，i還是比j好。為什麼，我們看看下面的式子：
 如果i比j好，代表 DP[i] + Z(i,k) <= DP[j] + Z(j,k)。
 移項得到 DP[j] - DP[i] >= Z(j,k) - Z(i,k) = 左界在[K_i+1,K_j]中，右界大於K_k的人，這點我覺得式子寫出來就很直觀了，就不多做說明了。
-因為後面那個東西，在k愈大的狀況，只會變小不會變大（左界固定，右界愈右邊符合的人當然愈少），所以這東西是有單調性的。
+因為後面那個東西，在k愈大的狀況，只會變小不會變大（左界固定，右界愈右邊符合的人當然愈少），所以這東西是有單調性的，也就是只要符合DP[i] + Z(i,k) <= DP[j] + Z(j,k)，對於所有d大於k，DP[i] + Z(i,d) <= DP[j] + Z(j,d) 也都會符合，這就是DP優化中的四邊形單調性。
 
 於是我們DP時要維護一個資料結構Magic（我自己取的XD，簡稱MG），對於i<j，DP[j]一定DP[i]好，所以MG的最後一個就是我們要的最小值，在push任何一個值進去時，我們可以計算一個時間，代表最後一個值什麼時候會殺掉這個新的值，然後把他丟進heap裡，然後每次查詢前都先更新MG，也就是看看現在的時間（這題的狀況就是任務的人數，我們要按照小到大去做，而我們可以知道當人數超過某個值的時候，某些點可以把後面的點殺掉），把heap頂端（時間最小）的值拿出來，看看是不是已經死了，不是就把他殺掉。
 
